[package]
name = "botq-dash-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
# iroh 1.0: default-features=false drops the native (tokio/mio/quinn-udp) bits
# that don't compile on wasm32; tls-ring gives a wasm-buildable TLS backend.
iroh = { version = "1.0.0", default-features = false, features = ["tls-ring"] }
# n0-future replaces tokio task/time on wasm (tokio's runtime/timers don't work on
# wasm32). iroh's SendStream/RecvStream expose inherent write_all/read_exact, so no
# tokio dep is needed for stream I/O here.
n0-future = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1"

[profile.release]
codegen-units = 1
strip = "symbols"
lto = true
opt-level = "z"
panic = "abort"
